--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,13 @@
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18"
+    "axios": "^1.6.0",
+    "lucide-react": "^0.309.0",
+    "primereact": "^10.7.0",
+    "primeicons": "^7.0.0",
+    "sonner": "^1.4.0",
+    "tailwindcss": "^4.1.18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
